# AMBER_Public

./: .gitignore  Examples.ipynb  README.md  dataloaders.py  env.yml  extract.py  extract_cfg.yaml  pyproject.toml  registry.py
Augmentations/: __init__.py  base_augmentation.py  overlap_events.py  random_dropout.py  random_flip.py  random_noise.py  random_phase_rotation.py  random_resampling.py  random_rotation.py  random_syn_noise.py  utils.py
Labeller/: __init__.py  base_labeller.py  tapered_labeller.py
src/amber/: __init__.py  database.py  dataloaders.py  registry.py  utils.py
src/amber/Augmentations/: __init__.py  base_augmentation.py  overlap_events.py  random_dropout.py  random_flip.py  random_noise.py  random_phase_rotation.py  random_resampling.py  random_rotation.py  random_syn_noise.py  resample.py  transpose.py
src/amber/Labeller/: __init__.py  base_labeller.py  tapered_labeller.py
tests/: conftest.py  dummy_data.py  test_dataset.py  test_ddp.py  test_extraction.py
